@@ -1,7 +1,9 @@
 package org.osm2world.core.osm.creation;
 
+import java.io.BufferedReader;
 import java.io.File;
 import java.io.FileOutputStream;
+import java.io.FileReader;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Collection;
@@ -27,6 +29,34 @@ import org.xml.sax.SAXException;
 public final class JOSMFileHack {
 	
 	private JOSMFileHack() {}
+	
+	/**
+	 * Returns true if the file was identified as being generated by JOSM.
+	 * This method peeks into the first lines of the file,
+	 * trying to find the generator tag.
+	 */
+	public static final boolean isJOSMGenerated(File file) {
+		
+		try {
+			
+			BufferedReader reader = new BufferedReader(new FileReader(file));
+			
+			for (int i=0; i<100; i++) {
+				String line = reader.readLine();
+				if (line != null) {
+					if (line.contains("generator='JOSM'")) {
+						return true;
+					}
+				}
+			}
+			
+			reader.close();
+			
+		} catch (IOException e) { }
+		
+		return false;
+		
+	}
 	
 	/**
 	 * creates a temporary file in the .osm format. This removes some
