@@ -1,4 +1,10 @@
-
+--------------------------------------------------------------------------------
+ OSM2World 0.1.6                                                     2011-05-?? 
+--------------------------------------------------------------------------------
+ 
+ * always use JOSM workaround for .osm files with generator='JOSM'
+ 
+ 
 --------------------------------------------------------------------------------
  OSM2World 0.1.5                                                     2011-04-30 
 --------------------------------------------------------------------------------
